<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".AddMoney">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/SendCash"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_cash_right"
        android:layout_width="96dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/cash" />

    <ImageView
        android:id="@+id/imageView_cash_left"
        android:layout_width="96dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/cash_rotated" />

    <TextView
        android:id="@+id/textView_add_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/add"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCardNumber"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#000000"
        android:hint="@string/card_number"
        android:maxLength="10"
        android:textColor="#000000"
        android:textColorHint="@color/purple_500"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCvv"
        app:layout_constraintEnd_toStartOf="@+id/editTextCvv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextCvv" />

    <EditText
        android:id="@+id/editTextCvv"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#000000"
        android:hint="@string/cvv"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:maxLength="3"
        android:textColorHint="@color/purple_500"
        app:counterMaxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBalance" />

    <TextView
        android:id="@+id/textView_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/amount"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCardNumber" />

    <EditText
        android:id="@+id/editTextEnterAmountAdd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="#000000"
        android:hint="0.0"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:textColorHint="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_amount"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView_amount"
        app:layout_constraintTop_toTopOf="@+id/textView_amount" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/euro"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_amount" />

    <ImageView
        android:id="@+id/imageViewUplataAdd"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginBottom="120dp"
        android:background="#5C00FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/insert_money" />

    <ImageView
        android:id="@+id/imageViewBackAdd"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_add_money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_add_money"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView_your_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/balance"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="0"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/euro"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewBalance"
        app:layout_constraintStart_toEndOf="@+id/textViewBalance"
        app:layout_constraintTop_toTopOf="@+id/textViewBalance" />

</androidx.constraintlayout.widget.ConstraintLayout>