<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".ENC">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/SendCash"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView_cash_right"
        android:layout_width="96dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/cash" />

    <ImageView
        android:id="@+id/imageView_cash_left"
        android:layout_width="96dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/cash_rotated" />

    <ImageView
        android:id="@+id/imageViewBackENC"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewENC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewENC"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textViewENC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/enc"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewNoviEnc"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewENC"
        app:srcCompat="@drawable/image_enc" />


    <Button
        android:id="@+id/buttonAddToEnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEnc"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/enc_amount"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:maxLength="10"
        android:textSize="16sp"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddToEnc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNoviEnc" />

</androidx.constraintlayout.widget.ConstraintLayout>