<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".Payout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/SendCash"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView_cash_right"
        android:layout_width="96dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/cash" />

    <ImageView
        android:id="@+id/imageView_cash_left"
        android:layout_width="96dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/cash_rotated" />

    <TextView
        android:id="@+id/textViewBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="0"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/euro"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewBalance"
        app:layout_constraintStart_toEndOf="@+id/textViewBalance"
        app:layout_constraintTop_toTopOf="@+id/textViewBalance" />

    <TextView
        android:id="@+id/textView_your_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/balance"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewPersonalId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_recipient_id_payout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:maxLength="10"
        android:backgroundTint="#000000"
        android:hint="@string/recipient_id"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:textColorHint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBalance" />

    <EditText
        android:id="@+id/editTextAmountPayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:backgroundTint="#000000"
        android:textColorHint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@+id/editText_recipient_id_payout"
        app:layout_constraintStart_toStartOf="@+id/editText_recipient_id_payout"
        app:layout_constraintTop_toBottomOf="@+id/editText_recipient_id_payout" />

    <ImageView
        android:id="@+id/imageViewPayout"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginBottom="120dp"
        android:background="#5C00FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/send_money" />

    <ImageView
        android:id="@+id/imageViewBackPayout"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPersonalId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPersonalId"
        app:srcCompat="@drawable/back" />


</androidx.constraintlayout.widget.ConstraintLayout>